Refactor: data import-export
With tests